# holdet

./: .gitignore  example.ipynb  fotmob.py  league.csv  ltsm.ipynb  main.py  pyproject.toml  v1.py  v2.py
fotmob/: fotmob.py
holdet/: holdet.py
lp/: lp.py
sofascore/: sofascore.py
src/holdet/: campaign.py  campaigns.py  candidate.py  formation.py  game.py  ml.py  util.py  v2.py
src/holdet/data/: holdet.py  sofascore.py  util.py
src/holdet/solver/: lp.py
util/: util.py
