[tool.black]
preview = "true"

[tool.poetry]
name = "holdet"
version = "0.1.0"
description = ""
authors = ["Martin Hansen <dontbeevilpls@gmail.com>"]
readme = "README.md"
packages =  [
    {include = "holdet"},
    {include = "fotmob"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pulp = "^2.7.0"
tqdm = "^4.64.1"
black = "^22.12.0"
types-requests = "^2.28.11.7"
torch = "^1.13.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
types-tqdm = "^4.64.7.11"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
