[tool.black]
preview = "true"

[tool.poetry]
name = "holdet"
version = "0.1.0"
description = ""
authors = ["Martin Hansen <dontbeevilpls@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pulp = "^2.7.0"
tqdm = "^4.64.1"
black = "^22.12.0"
types-requests = "^2.28.11.7"
rich = "^13.3.5"
requests-cache = "^1.0.1"
pyrate-limiter = "^2.10.0"
requests-ratelimiter = "^0.4.0"
pandas = "^2.0.2"
ipykernel = "^6.25.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
holdet = 'holdet.v2:main'
